Let global document change validator trigger service restarts in hosted Vespa