@@ -2,6 +2,7 @@
 package com.yahoo.vespa.model.application.validation.change;
 
 import com.yahoo.config.application.api.ValidationId;
+import com.yahoo.config.provision.ClusterSpec;
 import com.yahoo.documentmodel.NewDocumentType;
 import com.yahoo.vespa.model.application.validation.Validation.ChangeContext;
 import com.yahoo.vespa.model.content.cluster.ContentCluster;
@@ -16,15 +17,12 @@ public class GlobalDocumentChangeValidator implements ChangeValidator {
 
     @Override
     public void validate(ChangeContext context) {
-        // TODO: cause restarts
-        if (!context.deployState().validationOverrides().allows(ValidationId.globalDocumentChange, context.deployState().now())) {
             for (Map.Entry<String, ContentCluster> currentEntry : context.previousModel().getContentClusters().entrySet()) {
                 ContentCluster nextCluster = context.model().getContentClusters().get(currentEntry.getKey());
                 if (nextCluster == null) continue;
 
                 validateContentCluster(context, currentEntry.getValue(), nextCluster);
             }
-        }
     }
 
     private void validateContentCluster(ChangeContext context, ContentCluster currentCluster, ContentCluster nextCluster) {
@@ -35,10 +33,12 @@ public class GlobalDocumentChangeValidator implements ChangeValidator {
                 boolean currentIsGlobal = currentCluster.isGloballyDistributed(currentDocumentType);
                 boolean nextIsGlobal = nextCluster.isGloballyDistributed(nextDocumentType);
                 if (currentIsGlobal != nextIsGlobal) {
-                    context.illegal(String.format("Document type %s in cluster %s changed global from %s to %s. " +
-                                                  "Add validation override '%s' to force this change through. " +
-                                                  "First, stop services on all content nodes. Then, deploy with validation override. Finally, start services on all content nodes.",
-                            documentTypeName, clusterName, currentIsGlobal, nextIsGlobal, ValidationId.globalDocumentChange.value()));
+                    String reason = "Document type %s in cluster %s changed global from %s to %s. ".formatted(documentTypeName, clusterName, currentIsGlobal, nextIsGlobal) +
+                                    "To handle this change, first stop services on all content nodes. Then, deploy with validation override. Finally, start services on all content nodes";
+                    if ( ! context.deployState().validationOverrides().allows(ValidationId.globalDocumentChange, context.deployState().now()))
+                        context.invalid(ValidationId.globalDocumentChange, reason);
+                    else if (context.deployState().isHosted())
+                        context.require(new VespaRestartAction(ClusterSpec.Id.from(clusterName), reason));
                 }
             }
         });
